--- a/src/composer.json
+++ b/src/composer.json
@@ -1,14 +1,19 @@
 {
     "name": "patterns/php",
     "description": "Design patterns realization on PHP",
-    "require": {
-        "php": ">=5.5"
-    },
-    "license": "MIT",
     "authors": [
         {
             "name": "pyvil",
             "email": "mail.pyvil@gmail.com"
         }
-    ]
+    ],
+    "require": {
+        "php": ">=5.5"
+    },
+    "license": "MIT",
+    "autoload" : {
+        "psr-4" : {
+            "Pattern\\" : "pattern/"
+        }
+    }
 }
